--- a/common/app/views/fragments/sections.scala.html
+++ b/common/app/views/fragments/sections.scala.html
@@ -34,7 +34,7 @@
 
             @*<!-- TODO this is temp till we have proper single domain editions -->*@
             @if(AustraliaFrontSwitch.isSwitchedOn){
-                <li class="nav__item"><a class="nav__link edition edition-au" data-link-name="switch to au edition" href="http://@site.ukHost/australia">Australia edition</a></li>
+                <li class="nav__item"><a class="nav__link edition edition-au" data-link-name="switch to au edition" href="http://@site.ukHost/australia@if(site.isUsEdition){#gu.prefs.switchOn=australia-edition}">Australia edition</a></li>
             }
         }{
             @Edition.others(request).map{ edition =>
