--- a/common/app/assets/stylesheets/module/headers/_page.scss
+++ b/common/app/assets/stylesheets/module/headers/_page.scss
@@ -33,3 +33,10 @@
   border-top: 5px solid $neutral2;
   color: #000;
 }
+
+
+/* Misc
+ ========================================================================== */
+.page-head--noborder {
+  border-bottom: 0;
+}
