--- a/football/app/views/fragments/matchesBody.scala.html
+++ b/football/app/views/fragments/matchesBody.scala.html
@@ -2,7 +2,7 @@
 @import support._
 @import org.joda.time.DateTime
 
-<h2 class="page-head page-head--article">
+<h2 class="page-head page-head--article @if(model.pageType != "live"){page-head--noborder}">
     <a data-link-name="article section" href="/football">Football</a>
 </h2>
 
