--- a/common/app/assets/stylesheets/module/nav/_nav.scss
+++ b/common/app/assets/stylesheets/module/nav/_nav.scss
@@ -51,6 +51,10 @@
       padding: 0;
     }
 
+    .nav--columns-football .nav__link {
+      border-top: 1px solid $neutral10;
+    }
+
     .nav--columns .nav__item {
       width: 46%;
       height: 36px;
