--- a/common/app/assets/stylesheets/module/nav/_nav.scss
+++ b/common/app/assets/stylesheets/module/nav/_nav.scss
@@ -51,6 +51,10 @@
       padding: 0;
     }
 
+    .nav--columns-football .nav__item {
+      padding-bottom: 12px;
+    }
+
     .nav--columns-football .nav__link {
       border-top: 1px solid $neutral10;
     }
