--- a/football/app/views/fragments/teamFixtures.scala.html
+++ b/football/app/views/fragments/teamFixtures.scala.html
@@ -21,7 +21,7 @@
 </a>
 }
 
-<li class="team-results competition-table js-front-trailblock" data-link-name="Team fixtures">
+<li class="team-results competition-table competition-table--front js-front-trailblock" data-link-name="Team fixtures">
     <h3 class="type-5">Previous result</h3>
     @previousResult.map{ result =>
         <h2 class="competitions-date type-7">@result.fixture.date.toString("EEEE d MMMM yyyy")</h2>
