--- a/common/app/views/fragments/commonJavaScriptSetup.scala.html
+++ b/common/app/views/fragments/commonJavaScriptSetup.scala.html
@@ -56,6 +56,10 @@
                 var style = styleNodes[i],
                     nameAndCacheKey = style.getAttribute('data-cache-file-woff').match(/fonts\/(.*)\.woff\.(.*)\.js$/),
                     cachedCss = localStorage.getItem('gu.fonts.' + nameAndCacheKey[1] + '.' + nameAndCacheKey[2]);
+                    // try to parse it (should really use the storage module)
+                    try {
+                        cachedCss = JSON.parse(cachedCss);
+                    } catch(e) {}
                 if (cachedCss) {
                     style.innerHTML = cachedCss;
                     style.setAttribute('data-cache-full', 'true');
