--- a/common/app/assets/stylesheets/module/football/_match-summary.scss
+++ b/common/app/assets/stylesheets/module/football/_match-summary.scss
@@ -27,3 +27,10 @@
         margin-top: $baseline*2;
         padding-top: 5px;
     }
+
+
+.match-summary__scorers {
+    @extend %type-11;
+    font-weight: bold;
+    color: $neutral4;
+}
