--- a/football/app/views/fragments/matchSummary.scala.html
+++ b/football/app/views/fragments/matchSummary.scala.html
@@ -8,16 +8,16 @@
 @defining((theMatch.homeTeam, theMatch.awayTeam)){ case (homeTeam, awayTeam) =>
   @if(theMatch.isLive || theMatch.isResult){
     <h2 class="type-3">@homeTeam.name @homeTeam.score</h2>
-    <p class="home-scorers type-11">@cleanScorers(homeTeam.scorers)</p>
+    <p class="home-scorers match-summary__scorers">@cleanScorers(homeTeam.scorers)</p>
     <h2 class="away-team type-3">@awayTeam.name @awayTeam.score</h2>
-    <p class="type-11">@cleanScorers(awayTeam.scorers)</p>
+    <p class="match-summary__scorers">@cleanScorers(awayTeam.scorers)</p>
   } else {
     <h2 class="type-3">@homeTeam.name v @awayTeam.name</h2>
   }
 
     @if(theMatch.homeTeam.aggregateScore){
         <p class="match-aggregate type-10"><span>(agg. <span>@theMatch.homeTeam.aggregateScore-@theMatch.awayTeam.aggregateScore</span>)</span></p>
-    } 
+    }
 
     @theMatch.comments.map{ comments => <h5 class="match-comment type-5">@comments.replace("(", "").replace(")", "")</h5>}
 }
