--- a/common/app/assets/stylesheets/module/experiments/_story.scss
+++ b/common/app/assets/stylesheets/module/experiments/_story.scss
@@ -75,7 +75,8 @@ $orange: #FF7F00;
 
   .main-caption { padding: $baseline*4 0px;}
 
-  .sample-paras {
+  .sample-paras,
+  .story-explainer {
     font-size: 1.6rem;
     line-height: 2.4rem;
     color: #000;
