--- a/common/app/assets/stylesheets/_vars.scss
+++ b/common/app/assets/stylesheets/_vars.scss
@@ -8,7 +8,7 @@
 /* Breakpoints
  ========================================================================== */
 $mobile: 18.75em; //300px
-$tablet: 37.5em; //600px
+$tablet: 40em; //640px
 $desktop: 56.25em; //900px
 
 /* Tweakpoints
@@ -105,12 +105,12 @@ $awayColour: #19646E;
 /* Grid
  ========================================================================== */
 $ratio        : 5/3;
-$fontsize     : 16;
-$base         : 24;
+$fontsize     : 16px;
+$base         : 24px;
 $baseTopPad   : 5px;
 $baseBotPad   : 7px;
 $baseLeftPad  : 9px;
 $baseRightPad : 10px;
-$gridCols     : 12;
+$gridCols     : 14;
 $gridWidth    : 80px;
 $gridHeight   : 48px;
