--- a/common/app/assets/stylesheets/module/nav/_nav.scss
+++ b/common/app/assets/stylesheets/module/nav/_nav.scss
@@ -169,7 +169,7 @@
   .nav--global .nav__link:visited {
     display: block;
     margin: 0 0 $baseline*3 0;
-    padding: 0 $baseline*3 0 $baseline*3;
+    padding: 0 6px 0 12px;
     font-family: $serif !important;
     @include font($serif, normal, 14, 48);
     font-size: 14px;
